# alsdiff

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  alsdiff.opam  dune-project  live_git.opam
.github/workflows/: builds_tests.yml
lib/: config.ml  diff.ml  dune  eff.ml  equality.ml  file.ml  fraction.ml  gadt.ml  gadt.txt  live.ml  oop.ml  output.ml  patch.ml  tax_xml.ml  time.ml  upath.ml  xml.ml
lib/base/: dune  upath.ml  xml.ml
lib/diff/: automation_patch.ml  clip_patch.ml  diff.ml  dune  track_patch.ml
lib/live/: automation.ml  clip.ml  context.ml  device.ml  dune  track.ml
lib/output/: dune  output.ml  text_output.ml
test/: audio_clip.xml  audio_clip_old.xml  automation.xml  automation_old.xml  dune  midi_clip.xml  midi_clip_old.xml  mixer.xml  mixer_old.xml  test_audio_clip.ml  test_clip_patch.ml  test_complex.ml  test_current_parent.ml  test_diff_audio_clip.ml  test_diff_automation.ml  test_diff_list.ml  test_diff_list_myers.ml  test_diff_list_ord.ml  test_diff_midi_clip.ml  test_diff_mixer.ml  test_live.ml  test_midi_clip.ml  test_upath.ml  test_wildcard.ml  test_wildcard_debug.ml  test_xml.ml  utils.ml
