opam-version: "2.0"
name: "live_git"
synopsis: "Git helper for Ableton Live Set(.als)"
description: "Git helper for Ableton Live Set(.als)"
maintainer: "Jay Xu <jay.xu.krfantasy@gmail.com>"
authors: "Jay Xu <jay.xu.krfantasy@gmail.com>"
license: "LICENSE.txt"
homepage: "https://github.com/krfantasy/live_git"
bug-reports: "https://github.com/krfantasy/live_git/issues"
dev-repo: "git+https://github.com/krfantasy/live_git.git"
depends: [
  "ocaml"
  "dune" {>= "3.19"}
  "camlzip"
  "xmlm"
  "angstrom"
  "eio"
  "eio_main"
  "alcotest" {with-test}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
