(library
 (name test_utils)
 (modules utils)
 (libraries live_git_lib alcotest))

(test
 (name test_upath)
 (modules test_upath)
 (libraries live_git_lib alcotest test_utils))

(test
 (name test_xml)
 (modules test_xml)
 (libraries live_git_lib alcotest test_utils))

(test
 (name test_live)
 (modules test_live)
 (libraries live_git_lib alcotest test_utils)
 (deps automation.xml))

(test
 (name test_wildcard)
 (modules test_wildcard)
 (libraries live_git_lib alcotest test_utils))

(test
 (name test_complex)
 (modules test_complex)
 (libraries live_git_lib alcotest test_utils))

(test
 (name test_diff_automation)
 (modules test_diff_automation)
 (libraries live_git_lib alcotest test_utils)
 (deps automation.xml automation_old.xml))

(test
 (name test_diff_list_ord)
 (modules test_diff_list_ord)
 (libraries live_git_lib alcotest test_utils))

(test
 (name test_diff_list_myers)
 (modules test_diff_list_myers)
 (libraries live_git_lib alcotest test_utils))

