(library
 (name test_utils)
 (modules utils)
 (libraries alsdiff_lib alcotest))

(test
 (name test_upath)
 (modules test_upath)
 (libraries alsdiff_lib alcotest test_utils))

(test
 (name test_xml)
 (modules test_xml)
 (libraries alsdiff_lib alcotest test_utils))

(test
 (name test_live)
 (modules test_live)
 (libraries alsdiff_lib alcotest test_utils)
 (deps automation.xml mixer.xml))

(test
 (name test_wildcard)
 (modules test_wildcard)
 (libraries alsdiff_lib alcotest test_utils))

(test
 (name test_complex)
 (modules test_complex)
 (libraries alsdiff_lib alcotest test_utils))

(test
 (name test_diff_automation)
 (modules test_diff_automation)
 (libraries alsdiff_lib alcotest test_utils)
 (deps automation.xml automation_old.xml))

(test
 (name test_diff_list_ord)
 (modules test_diff_list_ord)
 (libraries alsdiff_lib alcotest test_utils))

(test
 (name test_diff_list_myers)
 (modules test_diff_list_myers)
 (libraries alsdiff_lib alcotest test_utils))

(test
 (name test_diff_mixer)
 (modules test_diff_mixer)
 (libraries alsdiff_lib alcotest test_utils)
 (deps mixer.xml mixer_old.xml))
